# platform.prebuilts.sdk

./: Android.bp  Android.mk  BUILD.bazel  Blueprints  TEST_MAPPING  gen-blueprints.py  toolchains.bzl  update_current.py  update_current.sh  update_support.py  utils.bzl
1/public/api/: android.txt
10/public/api/: android.txt
11/public/api/: android.txt
12/public/api/: android.txt
13/public/api/: android.txt
14/public/api/: android.txt
15/public/api/: android.txt
16/public/api/: android.txt
17/public/api/: android.txt
18/public/api/: android.txt
19/public/api/: android.txt
2/public/api/: android.txt
20/public/api/: android.txt
21/public/api/: android.txt
21/system/api/: android.txt
22/public/api/: android.txt
22/system/api/: android.txt
23/public/api/: android.txt
23/system/api/: android.txt
24/public/api/: android.txt
25/public/api/: android.txt
28/public/api/: android-removed.txt
28/system/api/: android.txt
29/system-server/api/: incompatibilities.txt
29/system/api/: android.txt
3/public/api/: android.txt
30/module-lib/api/: android-non-updatable.txt
30/public/api/: android-removed.txt  art.txt  incompatibilities.txt
30/system/api/: android-removed.txt  framework-connectivity.txt  incompatibilities.txt
30/test/api/: android.txt
31/module-lib/api/: android.txt
31/public/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-removed.txt  art.txt  incompatibilities.txt
31/system/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android.txt  framework-connectivity-tiramisu.txt  incompatibilities.txt
32/public/api/: android-non-updatable-incompatibilities.txt
32/system/api/: android-incompatibilities.txt  android-removed.txt
33/module-lib/api/: android-non-updatable-incompatibilities.txt
33/public/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-removed.txt  art.txt
33/system/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-removed.txt  android.txt
34/module-lib/api/: android-incompatibilities.txt  android-non-updatable.txt
34/public/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-non-updatable-removed.txt  android-removed.txt  art-incompatibilities.txt  art.txt
34/system/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-non-updatable.txt  android-removed.txt  android.txt  framework-connectivity-incompatibilities.txt  framework-tethering-incompatibilities.txt
35/: finalized-flags.txt  flags.txt
35/module-lib/api/: android-incompatibilities.txt  android.txt
35/public/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-removed.txt  art-incompatibilities.txt
35/system/api/: android-incompatibilities.txt  android-removed.txt  android.txt  framework-wifi-removed.txt
36/: README.md
36/module-lib/api/: android-incompatibilities.txt
36/public/api/: art-incompatibilities.txt  framework-connectivity-b.txt
36/system/api/: android-non-updatable.txt  android.txt  framework-bluetooth-incompatibilities.txt  framework-connectivity-b.txt  framework-ondeviceintelligence.txt
36/test/api/: android-non-updatable.txt  framework-ondeviceintelligence-platform.txt  framework-ondeviceintelligence.txt  framework-platformcrashrecovery.txt
4/public/api/: android.txt
5/public/api/: android.txt
6/public/api/: android.txt
7/public/api/: android.txt
8/public/api/: android.txt
9/public/api/: android.txt
api/: 17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt
current/: Android.bp  Android.mk  androidx-README.md  definitions.mk  fix_dependencies.mk  framework.aidl  import_current_sdk.sh  import_support.sh  update_androidx-api.sh
current/aaos-libs/: Android.bp  OWNERS  car-apps-common.aar  car-assist-lib.aar  car-broadcastradio-support.aar  car-media-common.aar  car-media-extensions.aar  car-messaging-models.aar  car-telephony-common.aar  car-testing-common.aar  car-ui-lib-no-overlayable.aar  car-ui-lib-testing-support.aar  car-ui-lib.aar  car-uxr-client-lib.aar  oem-token-lib.aar  remove_overlayable.py  token-shared-lib.apk  token-sharedlibrary.aar  update_prebuilts.sh
current/androidx/: Android.bp  Android.mk  JavaPlugins.bp  OWNERS  TEST_MAPPING  drop_config.toml
current/androidx-legacy/: Android.bp
current/car/: Android.mk
current/optional/: Android.bp  Android.mk
current/public/: framework.aidl
current/support/: Android.bp  Android.mk  definitions.mk  fix_dependencies.mk
current/support-appcompat/: Android.mk  AndroidManifest.xml
current/support-v13/: Android.mk  AndroidManifest.xml
current/support-v4/: Android.mk  AndroidManifest.xml
extensions/: README.md
mainline/: Android.bp
opt/: README.txt
opt/wear/: Android.bp
org.apache.http.legacy/: Android.mk
renderscript/: Android.mk
renderscript/lib/: libclcore.bc
sdk-annotations/: README.txt
support-api/: 22.1.0.txt  23.1.0.txt  23.1.1.txt
system-api/: 22.txt  23.txt  24.txt  28.txt
system_current/: Android.bp  Android.mk  framework.aidl
tools/: Android.bp  Android.mk  BUILD.bazel  OWNERS  README-jack-code-coverage.md  README-jack-server.md  README-jack-server.txt  jack  jack-admin  jack-diagnose  jack_server_setup.mk  jack_versions.mk
tools/darwin/: aapt  aidl  bcc_compat  dexdump  libbcc.dylib  libbcinfo.dylib  libc++.dylib  libc++abi.dylib  libcompiler_rt.dylib  libcxxabi.dylib  llvm-rs-cc  source.properties  zipalign
tools/darwin/lib/: libc++.dylib
tools/jetifier/: OWNERS
tools/linux/: aapt  aidl  bcc_compat  dexdump  llvm-rs-cc  zipalign
update_current/: extract_deps.py  extract_deps.tmpl  update_current.py
update_prebuilts/: OWNERS  extract_deps.py  update_prebuilts.py
(+67123 files in other folders)
